# WhisperTranscription

./: .gitignore  fonts.qrc  pyproject.toml  readme.md  settings.json
src/: main.py
src/audio/: recorder.py  utils.py
src/diarization/: __init__.py  api.py  local.py
src/transcription/: language_options.py  transcriber.py  worker.py
src/ui/: app.py  fonts.py  progress.py  utils.py  waveform.py
